OLMIS-7305: Generating stock on hand csv file and sending to sftp server
